<resources>
    <string name="app_name">Assignment 1</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>

    <string name="reset">C</string>
    <string name="equal">=</string>

    <string name="display"> </string>
    <string name="advanceText">ADVANCE - SCIENTIFIC</string>
    <string name="standardText">STANDARD</string>

    <string name="remainder">%</string>
    <string name="max">MAX</string>
    <string name="min">MIN</string>
    <string name="power">POW</string>

</resources>