<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display"
                android:textSize="36sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="one_btn"
                android:backgroundTint="#66B9F9"
                android:textColor="@color/black"
                android:text="@string/one"
                android:textSize="20sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/two"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:textColor="@color/black"
                android:onClick="two_btn"
                android:layout_margin="3dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/three"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:textColor="@color/black"
                android:onClick="three_btn"
                android:text="@string/three"
                android:textSize="20sp" />

            <Button
                android:id="@+id/add"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:onClick="add_btn"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:textColor="@color/black"
                android:onClick="four_btn"
                android:text="@string/four"
                android:textSize="20sp" />

            <Button
                android:id="@+id/five"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:textColor="@color/black"
                android:onClick="five_btn"
                android:text="@string/five"
                android:textSize="20sp" />

            <Button
                android:id="@+id/six"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:textColor="@color/black"
                android:onClick="six_btn"
                android:text="@string/six"
                android:textSize="20sp" />

            <Button
                android:id="@+id/subtract"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:onClick="subtract_btn"
                android:text="@string/subtract"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:textColor="@color/black"
                android:onClick="seven_btn"
                android:text="@string/seven"
                android:textSize="20sp" />

            <Button
                android:id="@+id/eight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:textColor="@color/black"
                android:onClick="eight_btn"
                android:text="@string/eight"
                android:textSize="20sp" />

            <Button
                android:id="@+id/nine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:textColor="@color/black"
                android:onClick="nine_btn"
                android:text="@string/nine"
                android:textSize="20sp" />

            <Button
                android:id="@+id/multiply"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:textColor="@color/black"
                android:onClick="multiply_btn"
                android:text="@string/multiply"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear_text"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:textColor="@color/black"
                android:onClick="reset_btn"
                android:text="@string/reset"
                android:textSize="20sp" />

            <Button
                android:id="@+id/zero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:textColor="@color/black"
                android:onClick="zero_btn"
                android:text="@string/zero"
                android:textSize="20sp" />

            <Button
                android:id="@+id/equal"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:onClick="equal_btn"
                android:text="@string/equal"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/divide"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:textColor="@color/black"
                android:onClick="divide_btn"
                android:text="@string/divide"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/advance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="advance_btn"
                android:text="@string/advanceText" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/scientific"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/remainder"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:onClick="remainder_btn"
                android:text="@string/remainder"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/power"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:onClick="power_btn"
                android:text="@string/power"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/max"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:onClick="max_btn"
                android:text="@string/max"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/min"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="#66B9F9"
                android:onClick="min_btn"
                android:text="@string/min"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>